# semestralniukol

./: readme.txt
ukolovnik/: CMakeLists.txt
ukolovnik/ukolovnik/: CMakeLists.txt  funkce.cpp  ukolovnik.cpp  ukolovnik.h
